[gd_scene load_steps=18 format=2]

[ext_resource path="res://World/world objects/forest1.tres" type="TileSet" id=1]
[ext_resource path="res://World/world objects/castle_pillarBig.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/world objects/tree4.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/KinematicBody2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/room/chapter2_entrance.tscn" type="PackedScene" id=5]
[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=6]
[ext_resource path="res://NPC/deathknight.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/Script/classoria_instituteOutside.gd" type="Script" id=8]
[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://intro/pause_menu.tscn" type="PackedScene" id=11]
[ext_resource path="res://intro/picture/pause.png" type="Texture" id=12]
[ext_resource path="res://NPC/research_defender.tscn" type="PackedScene" id=13]
[ext_resource path="res://intro/tres/path_arrow.tres" type="Texture" id=14]

[sub_resource type="CircleShape2D" id=2]
radius = 46.0109

[sub_resource type="DynamicFont" id=1]
size = 5
font_data = ExtResource( 9 )

[sub_resource type="TileSet" id=3]
0/name = "path_arrow.tres 0"
0/texture = ExtResource( 14 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 7, 7 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="classoria_instituteOutside" type="Node2D"]
script = ExtResource( 8 )

[node name="floor1" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( 0, 22, 65537, 1, 22, 65537, 2, 22, 65537, 3, 22, 65537, 4, 22, 65537, 5, 22, 65537, 6, 22, 65537, 7, 22, 196609, 8, 22, 65537, 9, 22, 65537, 10, 22, 65537, 11, 22, 65537, 12, 22, 65537, 13, 22, 65537, 14, 22, 65537, 15, 22, 65537, 16, 22, 65537, 17, 22, 65537, 18, 22, 65537, 19, 22, 65537, 20, 22, 65537, 21, 22, 65537, 22, 22, 65537, 23, 22, 65537, 24, 22, 65537, 25, 22, 65537, 26, 22, 65537, 27, 22, 131075, 28, 22, 131075, 29, 22, 131075, 30, 22, 65537, 31, 22, 65537, 32, 22, 65537, 65536, 22, 65537, 65537, 22, 196608, 65538, 22, 65537, 65539, 22, 65537, 65540, 22, 65537, 65541, 22, 65537, 65542, 22, 65537, 65543, 22, 65537, 65544, 22, 65537, 65545, 22, 65537, 65546, 22, 196609, 65547, 22, 65537, 65548, 22, 65537, 65549, 22, 65537, 65550, 22, 65537, 65551, 22, 65537, 65552, 22, 196609, 65553, 22, 65537, 65554, 22, 65537, 65555, 22, 65537, 65556, 22, 65537, 65557, 22, 65537, 65558, 22, 65537, 65559, 22, 65537, 65560, 22, 65537, 65561, 22, 65537, 65562, 22, 65537, 65563, 22, 65537, 65564, 22, 131075, 65565, 22, 131075, 65566, 22, 131075, 65567, 22, 196608, 65568, 22, 65537, 131072, 22, 65537, 131073, 22, 65537, 131074, 22, 65537, 131075, 22, 65537, 131076, 22, 65537, 131077, 22, 65537, 131078, 22, 196608, 131079, 22, 65537, 131080, 22, 65537, 131081, 22, 65537, 131082, 22, 65537, 131083, 22, 65537, 131084, 22, 65537, 131085, 22, 65537, 131086, 22, 65537, 131087, 22, 65537, 131088, 22, 65537, 131089, 22, 65537, 131090, 22, 65537, 131091, 22, 65537, 131092, 22, 65537, 131093, 22, 196609, 131094, 22, 65537, 131095, 22, 65537, 131096, 22, 65537, 131097, 22, 65537, 131098, 22, 196609, 131099, 22, 65537, 131100, 22, 65537, 131101, 22, 131075, 131102, 22, 131075, 131103, 22, 131075, 131104, 22, 65537, 196608, 22, 65537, 196609, 22, 196609, 196610, 22, 65537, 196611, 22, 196609, 196612, 22, 65537, 196613, 22, 65537, 196614, 22, 65537, 196615, 22, 65537, 196616, 22, 65537, 196617, 22, 65537, 196618, 22, 65537, 196619, 22, 65537, 196620, 22, 65537, 196621, 22, 65537, 196622, 22, 65537, 196623, 22, 65537, 196624, 22, 196608, 196625, 22, 65537, 196626, 22, 65537, 196627, 22, 65537, 196628, 22, 196609, 196629, 22, 196609, 196630, 22, 196609, 196631, 22, 65537, 196632, 22, 65537, 196633, 22, 196608, 196634, 22, 65537, 196635, 22, 65537, 196636, 22, 65537, 196637, 22, 65537, 196638, 22, 131075, 196639, 22, 131075, 196640, 22, 131075, 262144, 22, 65537, 262145, 22, 65537, 262146, 22, 65537, 262147, 22, 65537, 262148, 22, 65537, 262149, 27, 65536, 262150, 27, 131076, 262151, 27, 131076, 262152, 27, 131076, 262153, 27, 131076, 262154, 27, 131076, 262155, 27, 131076, 262156, 27, 131076, 262157, 27, 131076, 262158, 22, 65537, 262159, 22, 65537, 262160, 22, 65537, 262161, 22, 65537, 262162, 22, 65537, 262163, 22, 65537, 262164, 22, 65537, 262165, 22, 65537, 262166, 22, 196609, 262167, 22, 65537, 262168, 22, 65537, 262169, 22, 65537, 262170, 22, 196608, 262171, 22, 65537, 262172, 22, 65537, 262173, 22, 65537, 262174, 22, 65537, 262175, 22, 131075, 262176, 22, 131075, 327680, 22, 65537, 327681, 22, 65537, 327682, 22, 196608, 327683, 22, 65537, 327684, 22, 65537, 327685, 27, 131076, 327686, 27, 131076, 327687, 27, 131076, 327688, 27, 131076, 327689, 27, 131076, 327690, 27, 131076, 327691, 27, 131076, 327692, 27, 131076, 327693, 27, 131076, 327694, 27, 131076, 327695, 22, 65537, 327696, 22, 65537, 327697, 22, 65537, 327698, 22, 65537, 327699, 22, 65537, 327700, 22, 65537, 327701, 22, 65537, 327702, 22, 65537, 327703, 22, 65537, 327704, 22, 65537, 327705, 22, 65537, 327706, 22, 65537, 327707, 22, 65537, 327708, 22, 65537, 327709, 22, 65537, 327710, 22, 65537, 327711, 22, 65537, 327712, 22, 65537, 393216, 27, 1, 393217, 27, 1, 393218, 27, 1, 393219, 27, 1, 393220, 27, 1, 393221, 27, 131076, 393222, 27, 131076, 393223, 27, 131076, 393224, 27, 131076, 393225, 27, 131076, 393226, 27, 131076, 393227, 27, 131076, 393228, 27, 131076, 393229, 27, 131076, 393230, 27, 131076, 393231, 27, 131076, 393232, 27, 131076, 393233, 22, 65537, 393234, 22, 65537, 393235, 22, 65537, 393236, 30, 5, 393237, 30, 65541, 393238, 22, 65537, 393239, 22, 65537, 393240, 22, 65537, 393241, 22, 65537, 393242, 22, 65537, 393243, 22, 65537, 393244, 22, 65537, 393245, 30, 5, 393246, 30, 65541, 393247, 30, 5, 393248, 30, 5, 458752, 27, 131076, 458753, 27, 131076, 458754, 27, 131076, 458755, 27, 131076, 458756, 27, 131076, 458757, 27, 131076, 458758, 27, 131076, 458759, 27, 131076, 458760, 27, 131076, 458761, 27, 131076, 458762, 27, 131076, 458763, 27, 131076, 458764, 27, 131076, 458765, 27, 131076, 458766, 27, 131076, 458767, 27, 131076, 458768, 27, 131076, 458769, 27, 131076, 458770, 27, 131076, 458771, 27, 131076, 458772, 30, 1, 458773, 30, 2, 458774, 30, 5, 458775, 30, 5, 458776, 30, 5, 458777, 30, 5, 458778, 30, 5, 458779, 30, 131077, 458780, 30, 5, 458781, 30, 0, 458782, 30, 1, 458783, 30, 1, 458784, 22, 65537, 524288, 27, 131076, 524289, 27, 131076, 524290, 27, 131076, 524291, 27, 131076, 524292, 27, 131076, 524293, 27, 131076, 524294, 27, 131076, 524295, 27, 131076, 524296, 27, 131076, 524297, 27, 131076, 524298, 27, 131076, 524299, 27, 131076, 524300, 27, 131076, 524301, 27, 131076, 524302, 27, 131076, 524303, 27, 131076, 524304, 27, 131076, 524305, 27, 131076, 524306, 27, 131076, 524307, 27, 131076, 524308, 30, 65537, 524309, 30, 65539, 524310, 30, 1, 524311, 30, 1, 524312, 30, 1, 524313, 30, 1, 524314, 30, 1, 524315, 30, 1, 524316, 30, 1, 524317, 30, 65540, 524318, 30, 65537, 524319, 27, 131076, 524320, 27, 131076, 589824, 27, 131076, 589825, 27, 131076, 589826, 27, 131076, 589827, 27, 131076, 589828, 27, 131076, 589829, 27, 131076, 589830, 27, 131076, 589831, 27, 131076, 589832, 27, 131076, 589833, 27, 131076, 589834, 27, 131076, 589835, 27, 131076, 589836, 27, 131076, 589837, 27, 131076, 589838, 27, 131076, 589839, 27, 131076, 589840, 27, 131076, 589841, 27, 131076, 589842, 27, 131076, 589843, 27, 131076, 589844, 27, 131076, 589845, 30, 65537, 589846, 30, 65537, 589847, 30, 65537, 589848, 30, 65537, 589849, 30, 65537, 589850, 30, 65537, 589851, 30, 65537, 589852, 30, 65537, 589853, 30, 65537, 589854, 30, 65537, 589855, 27, 131076, 589856, 27, 131076, 655360, 27, 131076, 655361, 27, 131076, 655362, 27, 131076, 655363, 27, 131076, 655364, 27, 131076, 655365, 27, 131076, 655366, 27, 131076, 655367, 27, 131076, 655368, 27, 131076, 655369, 27, 131076, 655370, 27, 131076, 655371, 27, 131076, 655372, 27, 131076, 655373, 27, 131076, 655374, 27, 131076, 655375, 27, 131076, 655376, 27, 131076, 655377, 27, 131076, 655378, 27, 131076, 655379, 27, 131076, 655380, 27, 131076, 655381, 27, 131076, 655382, 30, 65537, 655383, 30, 65537, 655384, 30, 65537, 655385, 30, 65537, 655386, 30, 65537, 655387, 30, 65537, 655388, 30, 65537, 655389, 30, 65537, 655390, 27, 131076, 655391, 27, 131076, 655392, 27, 131076, 720896, 27, 131076, 720897, 27, 131076, 720898, 27, 131076, 720899, 27, 131076, 720900, 27, 131076, 720901, 27, 131076, 720902, 27, 131076, 720903, 27, 131076, 720904, 27, 131076, 720905, 27, 131076, 720906, 27, 131076, 720907, 27, 131076, 720908, 27, 131076, 720909, 27, 131076, 720910, 27, 131076, 720911, 27, 131076, 720912, 27, 131076, 720913, 27, 131076, 720914, 27, 131076, 720915, 27, 131076, 720916, 27, 131076, 720917, 27, 131076, 720918, 27, 131076, 720919, 27, 131076, 720920, 27, 131076, 720921, 27, 131076, 720922, 27, 131076, 720923, 27, 131076, 720924, 27, 131076, 720925, 27, 131076, 720926, 27, 131076, 720927, 27, 131076, 720928, 27, 131076, 786432, 27, 131076, 786433, 27, 131076, 786434, 27, 131076, 786435, 27, 131076, 786436, 27, 131076, 786437, 27, 131076, 786438, 27, 131076, 786439, 27, 131076, 786440, 27, 131076, 786441, 27, 131076, 786442, 27, 131076, 786443, 27, 131076, 786444, 27, 131076, 786445, 27, 131076, 786446, 27, 131076, 786447, 27, 131076, 786448, 27, 131076, 786449, 27, 131076, 786450, 27, 131076, 786451, 27, 131076, 786452, 27, 131076, 786453, 27, 131076, 786454, 27, 131076, 786455, 27, 131076, 786456, 27, 131076, 786457, 27, 131076, 786458, 27, 131076, 786459, 27, 131076, 786460, 27, 131076, 786461, 27, 131076, 786462, 27, 131076, 786463, 27, 131076, 786464, 27, 131076, 851968, 27, 131076, 851969, 27, 131076, 851970, 27, 131076, 851971, 27, 131076, 851972, 27, 131076, 851973, 27, 131076, 851974, 27, 131076, 851975, 27, 131076, 851976, 27, 131076, 851977, 27, 131076, 851978, 27, 131076, 851979, 27, 131076, 851980, 27, 131076, 851981, 27, 131076, 851982, 27, 131076, 851983, 27, 131076, 851984, 27, 131076, 851985, 27, 131076, 851986, 27, 131076, 851987, 27, 131076, 851988, 27, 131076, 851989, 27, 131076, 851990, 27, 131076, 851991, 27, 131076, 851992, 27, 131076, 851993, 27, 131076, 851994, 27, 131076, 851995, 27, 131076, 851996, 27, 131076, 851997, 27, 131076, 851998, 27, 131076, 851999, 27, 131076, 852000, 27, 131076, 917504, 27, 131076, 917505, 27, 131076, 917506, 27, 131076, 917507, 27, 131076, 917508, 27, 131076, 917509, 27, 131076, 917510, 27, 131076, 917511, 27, 131076, 917512, 27, 131076, 917513, 27, 131076, 917514, 27, 131076, 917515, 27, 131076, 917516, 27, 131076, 917517, 27, 131076, 917518, 27, 131076, 917519, 27, 131076, 917520, 27, 131076, 917521, 27, 131076, 917522, 27, 131076, 917523, 27, 131076, 917524, 27, 131076, 917525, 27, 131076, 917526, 27, 131076, 917527, 27, 131076, 917528, 27, 131076, 917529, 27, 131076, 917530, 27, 131076, 917531, 27, 131076, 917532, 27, 131076, 917533, 27, 131076, 917534, 27, 131076, 917535, 27, 131076, 917536, 27, 131076, 983040, 27, 131076, 983041, 27, 131076, 983042, 27, 131076, 983043, 27, 131076, 983044, 27, 131076, 983045, 27, 131076, 983046, 27, 131076, 983047, 27, 131076, 983048, 27, 131076, 983049, 27, 131076, 983050, 27, 131076, 983051, 27, 131076, 983052, 27, 131076, 983053, 27, 131076, 983054, 27, 131076, 983055, 27, 131076, 983056, 27, 131076, 983057, 27, 131076, 983058, 27, 131076, 983059, 27, 131076, 983060, 27, 131076, 983061, 27, 131076, 983062, 27, 131076, 983063, 27, 131076, 983064, 27, 131076, 983065, 27, 131076, 983066, 27, 131076, 983067, 27, 131076, 983068, 27, 131076, 983069, 27, 131076, 983070, 27, 131076, 983071, 27, 131076, 983072, 27, 131076, 1048576, 27, 131076, 1048577, 27, 131076, 1048578, 27, 131076, 1048579, 27, 131076, 1048580, 27, 131076, 1048581, 27, 131076, 1048582, 27, 131076, 1048583, 27, 131076, 1048584, 27, 131076, 1048585, 27, 131076, 1048586, 27, 131076, 1048587, 27, 131076, 1048588, 27, 131076, 1048589, 27, 131076, 1048590, 27, 131076, 1048591, 27, 131076, 1048592, 27, 131076, 1048593, 27, 131076, 1048594, 27, 131076, 1048595, 27, 131076, 1048596, 27, 131076, 1048597, 27, 131076, 1048598, 27, 131076, 1048599, 27, 131076, 1048600, 27, 131076, 1048601, 27, 131076, 1048602, 27, 131076, 1048603, 27, 131076, 1048604, 27, 131076, 1048605, 27, 131076, 1048606, 27, 131076, 1048607, 27, 131076, 1048608, 27, 131076, 1114112, 27, 131076, 1114113, 27, 131076, 1114114, 27, 131076, 1114115, 27, 131076, 1114116, 27, 131076, 1114117, 27, 131076, 1114118, 27, 131076, 1114119, 27, 131076, 1114120, 27, 131076, 1114121, 27, 131076, 1114122, 27, 131076, 1114123, 27, 131076, 1114124, 27, 131076, 1114125, 27, 131076, 1114126, 27, 131076, 1114127, 27, 131076, 1114128, 27, 131076, 1114129, 27, 131076, 1114130, 27, 131076, 1114131, 27, 131076, 1114132, 27, 131076, 1114133, 27, 131076, 1114134, 27, 131076, 1114135, 27, 131076, 1114136, 27, 131076, 1114137, 27, 131076, 1114138, 27, 131076, 1114139, 27, 131076, 1114140, 27, 131076, 1114141, 27, 131076, 1114142, 27, 131076, 1114143, 27, 131076, 1114144, 27, 131076, 1179648, 27, 131076, 1179649, 27, 131076, 1179650, 27, 131076, 1179651, 27, 131076, 1179652, 27, 131076, 1179653, 27, 131076, 1179654, 27, 131076, 1179655, 27, 131076, 1179656, 27, 131076, 1179657, 27, 131076, 1179658, 27, 131076, 1179659, 27, 131076, 1179660, 27, 131076, 1179661, 27, 131076, 1179662, 27, 131076, 1179663, 27, 131076, 1179664, 27, 131076, 1179665, 27, 131076, 1179666, 27, 131076, 1179667, 27, 131076, 1179668, 27, 131076, 1179669, 27, 131076, 1179670, 27, 131076, 1179671, 27, 131076, 1179672, 27, 131076, 1179673, 27, 131076, 1179674, 27, 131076, 1179675, 27, 131076, 1179676, 27, 131076, 1179677, 27, 131076, 1179678, 27, 131076, 1179679, 27, 131076, 1179680, 27, 131076, 1245184, 27, 131076, 1245185, 27, 131076, 1245186, 27, 131076, 1245187, 27, 131076, 1245188, 27, 131076, 1245189, 27, 131076, 1245190, 27, 131076, 1245191, 27, 131076, 1245192, 27, 131076, 1245193, 27, 131076, 1245194, 27, 131076, 1245195, 27, 131076, 1245196, 27, 131076, 1245197, 27, 131076, 1245198, 27, 131076, 1245199, 27, 131076, 1245200, 27, 131076, 1245201, 27, 131076, 1245202, 27, 131076, 1245203, 27, 131076, 1245204, 27, 131076, 1245205, 27, 131076, 1245206, 27, 131076, 1245207, 27, 131076, 1245208, 27, 131076, 1245209, 27, 131076, 1245210, 27, 131076, 1245211, 27, 131076, 1245212, 27, 131076, 1245213, 27, 131076, 1245214, 27, 131076, 1245215, 27, 131076, 1245216, 27, 131076 )

[node name="floor2" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( 196613, 27, 0, 196614, 27, 2, 196615, 27, 2, 196616, 27, 2, 196617, 27, 2, 196618, 27, 2, 196619, 27, 2, 196620, 27, 2, 196621, 27, 5, 262149, 27, 196608, 262150, 26, 0, 262151, 26, 1, 262152, 26, 1, 262153, 26, 1, 262154, 26, 1, 262155, 26, 1, 262156, 26, 1, 262157, 26, 2, 262158, 27, 5, 327684, 27, 0, 327685, 26, 0, 327686, 26, 65537, 327687, 26, 65537, 327688, 26, 65537, 327689, 26, 65537, 327690, 26, 65537, 327691, 26, 65537, 327692, 26, 65537, 327693, 26, 65537, 327694, 26, 2, 327695, 27, 3, 327696, 27, 5, 393216, 27, 196610, 393217, 27, 196610, 393218, 27, 196610, 393219, 27, 196610, 393220, 26, 0, 393221, 26, 65537, 393222, 26, 65537, 393223, 26, 65537, 393224, 26, 65537, 393225, 26, 65537, 393226, 26, 65537, 393227, 26, 65537, 393228, 26, 65537, 393229, 26, 65537, 393230, 26, 65537, 393231, 26, 2, 393233, 27, 3, 393234, 27, 3, 393235, 27, 3, 393236, 27, 5, 458753, 26, 0, 458754, 26, 65537, 458755, 26, 65537, 458756, 26, 65537, 458757, 26, 65537, 458758, 26, 65537, 458759, 26, 65537, 458760, 26, 65537, 458761, 26, 65537, 458762, 26, 65537, 458763, 26, 65537, 458764, 26, 65537, 458765, 26, 65537, 458766, 26, 65537, 458767, 26, 65537, 458768, 26, 2, 458772, 27, 131077, 458783, 27, 0, 458784, 27, 1, 524289, 26, 65536, 524292, 26, 65536, 524293, 26, 65537, 524294, 26, 65537, 524295, 26, 65537, 524296, 26, 65537, 524297, 26, 65537, 524298, 26, 65537, 524299, 26, 65537, 524300, 26, 65537, 524301, 26, 65537, 524302, 26, 65537, 524303, 26, 65537, 524304, 26, 65537, 524305, 26, 2, 524308, 27, 131077, 524318, 27, 0, 589825, 26, 65536, 589826, 26, 65537, 589828, 26, 65536, 589829, 26, 65537, 589830, 26, 65537, 589831, 26, 65537, 589832, 26, 65537, 589833, 26, 65537, 589834, 26, 65537, 589835, 26, 65537, 589836, 26, 65537, 589837, 26, 65537, 589838, 26, 65537, 589839, 26, 65537, 589840, 26, 65537, 589841, 26, 65538, 589842, 33, 1, 589845, 27, 5, 589854, 27, 65536, 655361, 26, 131072, 655362, 26, 131073, 655363, 26, 65537, 655364, 24, 131072, 655365, 26, 65537, 655366, 26, 65537, 655367, 26, 65537, 655368, 26, 65537, 655369, 26, 65537, 655370, 26, 65537, 655371, 26, 65537, 655372, 26, 65537, 655373, 26, 65537, 655374, 26, 65537, 655375, 26, 65537, 655376, 26, 65537, 655377, 26, 65538, 655379, 12, 65537, 655382, 27, 1, 655383, 27, 1, 655384, 27, 1, 655385, 27, 1, 655386, 27, 1, 655387, 27, 1, 655388, 27, 1, 655389, 27, 1, 655391, 7, 1, 720897, 12, 65537, 720899, 26, 131072, 720900, 26, 131073, 720901, 26, 131073, 720902, 26, 131073, 720903, 26, 65537, 720904, 26, 65537, 720905, 26, 65537, 720906, 26, 65537, 720907, 26, 131073, 720908, 26, 131073, 720909, 26, 131073, 720910, 26, 131073, 720911, 26, 131073, 720912, 26, 131073, 720913, 26, 131074, 720917, 33, 1, 720921, 33, 1, 720925, 12, 65538, 786437, 12, 65537, 786439, 26, 131072, 786440, 26, 65537, 786441, 26, 65537, 786442, 26, 131074, 786447, 33, 1, 786462, 33, 1, 851969, 7, 1, 851970, 33, 0, 851976, 26, 65536, 851977, 26, 65538, 851987, 32, 0, 851992, 22, 0, 851993, 22, 2, 851998, 32, 0, 917511, 33, 0, 917512, 26, 65536, 917513, 26, 65538, 917517, 12, 65537, 917528, 22, 131072, 917529, 22, 131074, 983041, 33, 1, 983044, 12, 65537, 983045, 33, 1, 983046, 7, 0, 983048, 26, 65536, 983049, 26, 65538, 983052, 2, 0, 983053, 2, 2, 983058, 7, 1, 983066, 12, 65538, 983068, 33, 1, 1048584, 26, 65536, 1048585, 26, 65538, 1048588, 2, 131072, 1048589, 2, 131074, 1048592, 12, 65537, 1048595, 33, 1, 1048599, 33, 0, 1048606, 12, 65538, 1114113, 12, 65537, 1114116, 7, 1, 1114119, 26, 0, 1114120, 26, 65537, 1114121, 26, 65537, 1114122, 26, 2, 1114139, 7, 1, 1179649, 33, 0, 1179655, 26, 65536, 1179656, 26, 65537, 1179657, 26, 65537, 1179658, 26, 65537, 1179659, 26, 1, 1179660, 26, 1, 1179661, 26, 1, 1179662, 26, 1, 1179663, 26, 1, 1179664, 26, 1, 1179665, 26, 1, 1179666, 26, 1, 1179667, 26, 1, 1179668, 26, 1, 1179669, 26, 1, 1179670, 26, 1, 1179671, 26, 1, 1179672, 26, 1, 1179673, 26, 1, 1179674, 26, 1, 1179675, 26, 1, 1179676, 26, 1, 1179677, 26, 1, 1179678, 26, 1, 1179679, 26, 1, 1179680, 26, 1, 1245187, 7, 0, 1245191, 26, 65536, 1245192, 26, 65537, 1245193, 26, 65537, 1245194, 26, 65537, 1245195, 26, 65537, 1245196, 26, 65537, 1245197, 26, 65537, 1245198, 26, 65537, 1245199, 26, 65537, 1245200, 26, 65537, 1245201, 26, 65537, 1245202, 26, 65537, 1245203, 26, 65537, 1245204, 26, 65537, 1245205, 26, 65537, 1245206, 26, 65537, 1245207, 26, 65537, 1245208, 26, 65537, 1245209, 26, 65537, 1245210, 26, 65537, 1245211, 26, 65537, 1245212, 26, 65537, 1245213, 26, 65537, 1245214, 26, 65537, 1245215, 26, 65537, 1245216, 26, 65537 )

[node name="floor3" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 720912, 12, 65538, 1179656, 7, 1, 1179665, 12, 65538, 1245199, 7, 1, 1245209, 12, 65538 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 504, 304 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/player"]
remote_path = NodePath("../../../Camera2D")

[node name="objects" type="YSort" parent="YSort"]

[node name="institute" parent="YSort/objects" instance=ExtResource( 2 )]
position = Vector2( 147, 81 )

[node name="Node2D" parent="YSort/objects" instance=ExtResource( 3 )]
position = Vector2( 439, 185 )

[node name="Node2D2" parent="YSort/objects" instance=ExtResource( 3 )]
position = Vector2( 347, 205 )

[node name="Node2D3" parent="YSort/objects" instance=ExtResource( 3 )]
position = Vector2( 235, 257 )

[node name="Node2D4" parent="YSort/objects" instance=ExtResource( 3 )]
position = Vector2( 276, 219 )

[node name="Node2D5" parent="YSort/objects" instance=ExtResource( 3 )]
position = Vector2( 487, 245 )

[node name="Node2D6" parent="YSort/objects" instance=ExtResource( 3 )]
position = Vector2( 379, 253 )

[node name="Node2D7" parent="YSort/objects" instance=ExtResource( 3 )]
position = Vector2( 83, 220 )

[node name="Node2D8" parent="YSort/objects" instance=ExtResource( 3 )]
position = Vector2( 35, 268 )

[node name="knightst" type="YSort" parent="YSort"]

[node name="deathknight" parent="YSort/knightst" instance=ExtResource( 7 )]
position = Vector2( 427, 249 )

[node name="deathknight2" parent="YSort/knightst" instance=ExtResource( 7 )]
position = Vector2( 277, 296 )

[node name="deathknight3" parent="YSort/knightst" instance=ExtResource( 7 )]
position = Vector2( 446, 311 )

[node name="deathknight4" parent="YSort/knightst" instance=ExtResource( 7 )]
position = Vector2( 313, 225 )

[node name="research_defender" parent="YSort/knightst" instance=ExtResource( 13 )]
position = Vector2( 138, 306 )

[node name="CollisionShape2D" parent="YSort/knightst/research_defender/Area2D" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 2 )

[node name="classoriaMain_pos" type="Position2D" parent="."]
position = Vector2( 506, 306 )

[node name="classoriaMain" parent="." instance=ExtResource( 5 )]
position = Vector2( 530, 305 )
rotation = 3.14159

[node name="Camera2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 504, 304 )

[node name="TopLeft" parent="Camera2D/Limits" index="0"]
position = Vector2( -2, 0 )

[node name="BottomRight" parent="Camera2D/Limits" index="1"]
position = Vector2( 528, 320 )

[node name="TopUi" type="CanvasLayer" parent="."]

[node name="pause_game" type="TextureButton" parent="TopUi"]
margin_left = 292.0
margin_top = 3.0
margin_right = 312.0
margin_bottom = 23.0
texture_normal = ExtResource( 12 )

[node name="HealthUI" parent="TopUi" instance=ExtResource( 10 )]
margin_left = 3.0
margin_top = 3.0
margin_right = 63.0
margin_bottom = 14.0

[node name="quest" type="TextureButton" parent="TopUi"]
margin_right = 40.0
margin_bottom = 40.0

[node name="pause_menu" parent="TopUi" instance=ExtResource( 11 )]

[node name="Label2" type="Label" parent="TopUi"]
margin_left = 132.0
margin_top = 8.0
margin_right = 205.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="arrow_path" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 1, 1 )
format = 1
tile_data = PoolIntArray( 19661323, 0, 0 )

[connection signal="pressed" from="TopUi/pause_game" to="." method="_on_pause_game_pressed"]

[editable path="YSort/knightst/research_defender"]
[editable path="Camera2D"]
